# art_museum_AI_robot

./: README.md
merge_artwork/: database.py  server.py
qr_gate/: CMakeLists.txt  qr_main.cpp  qr_scanner.cpp  qr_scanner.h  servo_controller.cpp  servo_controller.h
robot_artwork_recognition/: CMakeLists.txt
robot_nav_client/: CMakeLists.txt  gesture.py  nav_client.cpp  package.xml
server/: issue_ticket.py
ui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
ui/pages/: artworkpage.cpp  artworkpage.h  destinationpage.cpp  destinationpage.h  navigatingpage.cpp  navigatingpage.h  navigationmanager.cpp  navigationmanager.h  qrpage.cpp  qrpage.h  standbypage.cpp  standbypage.h
